	associated documentation
	* scripts/CMakeLists.txt: Add option PYTHON_PREFIX to allow the user
	to specify where the Python library will be installed. Note that it
	creates an _openbabel.dll on Windows in error (it should be
	_openbabel.pyd).

2009-09-17  Noel O'Boyle  <baoilleach@gmail.com>

	* src/parsmart.cpp: Handle ring-closure bonds involved in
	stereochemistry.

2009-09-16  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/stereo/perception.cpp: Implement para-stereocenter detection.
	 (see J. Chem. Inf. Comput. Sci., Vol. 33, No. 6, 1993 or code for details)

2009-09-16  Noel O'Boyle  <baoilleach@gmail.com>

	* src/GUI/CMakeLists.txt: Add icon. Add comctl32.lib for Windows
	build.
	* windows-vc2008, windows-vc2006/cmake.bat: Create new folder for
	MSVC++ Express 2008. Add batch file to run cmake.

2009-09-16  Noel O'Boyle  <baoilleach@gmail.com>

	* src/GUI/optswx.cpp: Minor mods to compile on Linux.

2009-09-13  Chris Morley

	* src/GUI/OBGUI.h,OBGUI.cpp:
	Replace deprecated file drag-and-drop with newer version using 
	wxFileDropTarget. Works in Windows; might even work in Linux.

	* src/GUI/optswx.cpp: options can now have a checkbox and an
	edit box allowing options to have parameters. These changes conflicted
	with the mods for Linux compatibility. The resolved version needs to be
	checked with Linux in case mistakes were made..

2009-09-11  Noel O'Boyle  <baoilleach@gmail.com>

	* src/GUI/CMakeLists.txt: Added Win32 to ensure that on Windows
	a command-line application was not created.

2009-09-11  Noel O'Boyle  <baoilleach@gmail.com>

	* src/GUI/*.h, *.cpp: Large number of minor mods for compatibility with unicode build of wxWidgets
	* CMakeLists.txt, src/GUI/CMakeLists.txt, tools/CMakeLists.txt: (1) Cmakeify the GUI build, (2) Add an option to
	enable a minimal build, consisting of just two file formats and one tool.

2009-09-06  Tim Vandermeersch <tim.vandermeersch@gmail.com>
